[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-memory"
version = "0.1.0"
description = "Intelligent memory system - extract, store, and retrieve memories from conversations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fyryxm", email = "fyryxm@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]
vector = [
    "chromadb>=0.4.0",
]

[project.scripts]
smart-memory = "smart_memory.cli:main"

[project.urls]
Homepage = "https://github.com/Fyryxm/smart-memory"
Documentation = "https://github.com/Fyryxm/smart-memory#readme"
Repository = "https://github.com/Fyryxm/smart-memory"
Issues = "https://github.com/Fyryxm/smart-memory/issues"

[tool.setuptools.packages.find]
where = ["."]